[tool.poetry]
name = "boxutils"
version = "0.1.0"
description = ""
authors = ["Xiaodong Yang <xiaoyan@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.2.1"
requests = "^2.32.4"
numpy = "2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
